# agno-dcp-demo

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  agent.py  config.py  main.py  policies.yaml  tools.py
app/routes/: agent.py  audit.py  pages.py
app/static/: app.js  style.css
app/templates/: base.html  index.html
docker/: .dockerignore  Dockerfile  docker-compose.yml
fly/: README.md  fly.toml
scripts/: verify_bundle.py
tests/: conftest.py  test_agent_service.py  test_routes.py
