[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agno-dcp-demo"
version = "0.2.0"
description = "End-to-end demo of agno-dcp: cryptographic governance for Agno agents in a banking collections workflow."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "DCP-AI Contributors" }]
keywords = [
    "agno",
    "dcp",
    "ai-agents",
    "governance",
    "audit",
    "compliance",
    "banking",
    "demo",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
]

dependencies = [
    "agno-dcp>=0.1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.0",
    "pydantic-settings>=2.5",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
]

[project.optional-dependencies]
llm = [
    "anthropic>=0.40",
    "openai>=1.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.8",
    "types-PyYAML",
]

[project.urls]
Homepage = "https://github.com/dcp-ai-protocol/agno-dcp-demo"
Demo = "https://demo.dcp-ai.org"
Issues = "https://github.com/dcp-ai-protocol/agno-dcp-demo/issues"
"agno-dcp" = "https://github.com/dcp-ai-protocol/agno-dcp"
"DCP-AI Protocol" = "https://dcp-ai.org/"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = ["-ra", "--strict-markers"]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "N", "S", "RUF"]
ignore = ["E501", "S101", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S", "N"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["agno.*", "agno_dcp.*", "sse_starlette.*", "anthropic.*", "openai.*"]
ignore_missing_imports = true
